# tddd86

./: .gitignore  README.md
build-Life-Desktop-Debug/: Life  Makefile
lab1/: CMakeLists.txt  Life.pro.user.03ce561
lab1/src/: life.cpp
lab2/: CMakeLists.txt  Lab2.files
lab2/build-EvilHangman-Desktop-Debug/: EvilHangman  Makefile
lab2/build-EvilHangman-Desktop_Qt_5_5_0_clang_64bit-Debug/: .qmake.cache  Makefile
lab2/build-EvilHangman-Desktop_Qt_5_5_0_clang_64bit-Debug/EvilHangman.app/Contents/: Info.plist
lab2/build-EvilHangman-Desktop_Qt_5_5_0_clang_64bit-Debug/EvilHangman.app/Contents/MacOS/: EvilHangman
lab2/build-WordChain-Desktop-Debug/: Makefile  WordChain
lab2/build-WordChain-Desktop_Qt_5_5_0_clang_64bit-Debug/: Makefile
lab2/build-WordChain-Desktop_Qt_5_5_0_clang_64bit-Debug/WordChain.app/Contents/: Info.plist
lab2/build-WordChain-Desktop_Qt_5_5_0_clang_64bit-Debug/WordChain.app/Contents/MacOS/: WordChain
lab2/evilhangman/: EvilHangman.pro
lab2/evilhangman/src/: evilhangman.cpp
lab2/wordchain/: WordChain.pro  WordChain.pro.user.03ce561  wordchain.pro
lab2/wordchain/src/: wordchain.cpp
lab3/tiles/: Tiles.pro
lab4/: GameState.cpp  GameState.h  Junk.cpp  Junk.h  Robot.cpp  Robot.h  Unit.cpp  Unit.h  mainwindow.cpp
lab5/: Boggle.pro
lab5/src/: Boggle.cpp  Boggle.h  Cube.cpp  Cube.h  boggleplay.cpp
lab6/src/: encoding.cpp
lab7/res/: readme.txt  readme.txt~
lab7/src/: brute.cpp  fast.cpp
lab8/src/: trailblazer.cpp
labb3/tiles/: TileList.cpp  TileList.h  Tiles.pro
labb3/tsp/: TSP.pro
life/: Life.pro
life/src/: life.cpp
(+10 files in other folders)
